--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -38,3 +38,20 @@ server {
         alias /app/www;
     }
 }
+
+server {
+    listen 80;
+    server_name energy.entropealabs.mine.nu;
+    client_max_body_size 20M;
+    location / {
+        add_header 'Access-Control-Allow-Credentials' 'true';
+        add_header 'Access-Control-Allow-Headers' 'Content-Type,Accept,X-Requested-With';
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+        add_header "Access-Control-Allow-Origin" $http_origin;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $http_host;
+        proxy_pass http://192.168.1.9:80;
+    }
+}
+
