--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,6 +1,28 @@
 server {
     listen 80;
     server_name _;
+    location ~* "^/api/v(\d\.\d)/node/(.{24})/sensors$" {
+        add_header 'Access-Control-Allow-Credentials' 'true';
+        add_header 'Access-Control-Allow-Headers' 'Content-Type,Accept,X-Requested-With,Authorization';
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+        add_header "Access-Control-Allow-Origin" $http_origin;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $http_host;
+        proxy_pass http://backend:8000;
+    }
+
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+server {
+    listen 443 ssl;
+    listen [::]:443 ipv6only=on;
+    ssl_certificate /etc/nginx/ssl/fullchain.pem;
+    ssl_certificate_key /etc/nginx/ssl/privkey.pem;
+
     location / {
         add_header 'Access-Control-Allow-Credentials' 'true';
         add_header 'Access-Control-Allow-Headers' 'Content-Type,Accept,X-Requested-With,Authorization';
@@ -39,6 +61,7 @@ server {
     }
 }
 
+
 server {
     listen 80;
     server_name energy.entropealabs.mine.nu;
@@ -54,4 +77,3 @@ server {
         proxy_pass http://192.168.1.9:80;
     }
 }
-
