update energy endpoint

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -64,7 +64,7 @@ server {
 
 server {
     listen 80;
-    server_name energy.entropealabs.mine.nu;
+    server_name energy.entropealabs.com;
     client_max_body_size 20M;
     location / {
         add_header 'Access-Control-Allow-Credentials' 'true';
